--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ function toDisplayDateTime(dateStr){
 const AREAS=[
   {id:"wellbeing", name:"Well‑Being"},
   {id:"depression", name:"Depression"},
-  {id:"anxiety", name="Anxiety / Distress"},
+  {id:"anxiety", name:"Anxiety / Distress"},
   {id:"functioning", name:"Functioning"},
   {id:"resilience", name="Resilience"},
   {id:"ptsd", name:"PTSD"},
