--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@ const AREAS=[
   {id:"depression", name:"Depression"},
   {id:"anxiety", name:"Anxiety / Distress"},
   {id:"functioning", name:"Functioning"},
-  {id:"resilience", name="Resilience"},
+  {id:"resilience", name:"Resilience"},
   {id:"ptsd", name:"PTSD"},
-  {id:"somatic", name="Somatic"},
+  {id:"somatic", name:"Somatic"},
   {id:"eating", name:"Eating"},
   {id:"relationships", name:"Relationships / Attachment"},
   {id:"ocd", name:"OCD"},
